--- a/post.html
+++ b/post.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <h1>Aqui el título del post</h1>
-    <p>Este es el contenido del sábado/p>
+    <p>Contenido del la nueva rama</p>
 </body>
 </html>
