Añado estilos que no existen

--- a/post.html
+++ b/post.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Post del blog</title>
     <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="css/estilos_que_no_existen.css">
 </head>
 <body>
     <h1>Aqui el título del post</h1>
